cmake_minimum_required(VERSION 3.0.0)
project(main VERSION 0.1.0)
set(CMAKE_CXX_COMPILER "g++")
set (CMAKE_CXX_FLAGS  "-g  -fexec-charset= GBK ")
include_directories(${PROJECT_SOURCE_DIR}/Include)
set(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR})
aux_source_directory(./src SrcFiles)
add_executable(main ${SrcFiles})
target_link_libraries(${PROJECT_NAME} LIB_SRCS)